# LPAR

./: .gitignore  README.md  pyproject.toml
docs/: LPS-architecture-overview.md  LPS-execution-plan.md  PRD-linkedin-positioning-system.md  project-status-roadmap.md
lps/: __init__.py  analysis.py  cli.py  content.py  ingestion.py  rewrite.py  schema.py  storage.py  versioning.py
tests/: test_analysis.py  test_content.py  test_ingestion.py  test_pipeline_smoke.py  test_rewrite.py  test_schema.py  test_versioning.py
tests/fixtures/: sample_profile.md  sample_profile_paste.txt
